# kagebunshin

./: .gitignore  AGENTS.md  CLAUDE.md  Letter-to-Kagebunshin-devs.md  README.md  main.py  pyproject.toml
docs/: TESTING.md  langgraph_docs.md
evals/: __init__.py  browsercomp-eval.py  run_browsercomp.py
examples/: simple_agent_example.py
kagebunshin/: __init__.py  __main__.py  additional_tools.py  agent.py  cli.py  cli_runner.py  config.py  fingerprint_evasion.py  group_chat.py  human_behavior.py  kagebunshin_agent.py  main.py  mark_page.js  state_manager.py  tool_utils.py  utils.py  webvoyager_v2.py
kagebunshin/automation/: behavior.py
kagebunshin/automation/browser/: element-discovery.js  element-filtering.js  main.js  overlap-detection.js  utils.js  (+1 more)
kagebunshin/cli/: runner.py
kagebunshin/communication/: group_chat.py
kagebunshin/config/: __init__.py  settings.py
kagebunshin/core/: agent.py  state.py  state_manager.py
kagebunshin/prompts/: kagebunshin_system_prompt.md
kagebunshin/tools/: delegation.py  workflow.py
kagebunshin/utils/: __init__.py  formatting.py
src/: __init__.py  __main__.py  main.py  mark_page.js  models.py  state_manager.py
tests/: __init__.py  conftest.py  test_anti_hallucination.py  test_clone_depth.py  test_simple_agent.py
tests/automation/: test_behavior.py  test_full_integration.py
tests/communication/: test_group_chat.py
tests/config/: test_viewport_settings.py
tests/core/: test_agent.py  test_state.py  test_state_manager.py
tests/tools/: test_delegation.py
tests/utils/: test_formatting.py  test_naming.py
(+11 files in other folders)
