[project]
name = "kagebunshin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "html-to-markdown>=1.9.0",
    "html2text>=2025.4.15",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.4",
    "petname>=2.6",
    "playwright>=1.54.0",
    "pypdf>=5.9.0",
    "readability>=0.3.2",
    "readability-lxml>=0.8.4.1",
    "redis>=6.4.0",
    "textual>=5.3.0",
]
